examples/anvil_verification/should_fail/test5/example1_anvil_receiver.anvil

chan ch {
    left res : (logic[8]@#3)
}

proc example1_anvil_receiver (endp : left ch) {
    reg data : logic[8];
    loop {
        let data = recv endp.res >>
        dprint "Data Receive: %d" (data) >>
        cycle 5
    }
}
